# ore_detection

./: .gitignore  AGENTS.md  README.md  README.txt  pyproject.toml  requirements-dev.txt  requirements-training-cuda.txt  requirements.txt  run_ui.cmd  run_ui.sh  setup_ui_cpu.cmd  setup_ui_cpu.sh  status.md  task.md  ui_interface.md
docs/: label_mapping.md  source_datasets.md  talc_strategy.md  ui_inference.md  ИИшенка.pptx
notebooks/: 01_train_source_binary_segmentation.ipynb  02_train_source_ore_segmentation.ipynb  04_predict_ore_masks_and_descriptors.ipynb  05_calibrate_intergrowth_hard_normal.ipynb  06_calibrate_erosion_ratio_intergrowth_metric.ipynb  07_calibrate_erosion_ratio_intergrowth_metric_from_ore_model.ipynb  08_finetune_binary_segmentation_ctunet_active_learning.ipynb
plans/: improve_source_ore_segmentation_training.md  intergrowth_hard_normal_morphology_plan.md  ore_detection_mvp_plan.md  source_ore_segmentation_talc_hsv_plan.md
scripts/: audit_all_datasets.py  convert_source_masks.py  convert_source_ore_type_masks.py  generate_hsv_dummy_predictions.py  make_mask_qa_overlays.py  make_talc_candidates.py  prepare_source_binary_downsampled_dataset.py  prepare_source_ore_downsampled_dataset.py  run_backend_ui.py  verify.py
tests/: test_active_learning_binary.py  test_backend_artifacts.py  test_backend_service.py  test_color_mask.py  test_contact_descriptors.py  test_erosion_ratio.py  test_hsv_dummy_segmentation.py  test_intergrowth_classification.py  test_intergrowth_descriptors.py  test_inventory.py  test_label_mapping.py  test_mask_io.py  (+21 more)
(+55 files in other folders)
