[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ore-detection"
version = "0.1.0"
description = "R&D pipeline for ore polished-section segmentation, descriptors, and weak classification."
requires-python = ">=3.13"
dependencies = [
    "numpy>=2",
    "pillow>=10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
ml = [
    "numpy",
    "pandas",
    "scikit-learn",
    "opencv-python",
    "torch",
    "tqdm",
    "segmentation-models-pytorch",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
